--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=MINTHONGVOLLEY_LAB4_SWT
 sonar.organization=swp391-for-testing
+sonar.java.binaries = build
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=LAB4_SWT
